# dbt-http

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml
.github/workflows/: ci.yml  release.yml
macros/: helpers.sql  http.sql
macros/adapters/: bigquery.sql  clickhouse.sql  databricks.sql  duckdb.sql  postgres.sql  redshift.sql  snowflake.sql
tests/: test_cli_behavior.py  test_project_metadata.py
