[project]
name = "dbt-http"
version = "0.1.0"
description = "A dbt package for explicit, adapter-aware HTTP calls from warehouse SQL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.8,<3.0",
]

[dependency-groups]
dev = [
    "dbt-duckdb>=1.8,<2.0",
    "pytest>=8.0",
    "ruff>=0.15.22",
    "sqlfluff>=3.2.0",
    "sqlfluff-templater-dbt>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.sqlfluff.core]
dialect = "ansi"
templater = "dbt"
exclude_rules = ["layout.indent"]
